--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,17 +27,23 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       
-      - name: Set up Node.js
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
+
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
-      
-      - name: Install dependencies
-        run: npm ci
+          node-version: '23.11.1'
+          cache-dependency-path: './pnpm-lock.yaml'
+          cache: 'pnpm'
+
+      - name: Install Dependencies
+        run: pnpm install
       
       - name: Build
-        run: npm run build
+        run: pnpm run build
         env:
           VITE_APP_VERSION: ${{ github.sha }}
       
