--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "my-app",
+  "name": "mfe-orchestrator-public-website",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.0",
@@ -47,6 +48,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "nextjs-google-analytics": "^2.3.7",
     "react": "19.1.0",
