--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,6 +46,7 @@ jobs:
         run: pnpm run build
         env:
           VITE_APP_VERSION: ${{ github.sha }}
+          NEXT_PUBLIC_RECAPTCHA_SITE_KEY: ${{ secrets.NEXT_PUBLIC_RECAPTCHA_SITE_KEY }}
       
       - name: Setup Pages
         uses: actions/configure-pages@v4
