--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,6 +47,7 @@ jobs:
         env:
           VITE_APP_VERSION: ${{ github.sha }}
           NEXT_PUBLIC_RECAPTCHA_SITE_KEY: ${{ secrets.NEXT_PUBLIC_RECAPTCHA_SITE_KEY }}
+          NEXT_PUBLIC_GOOGLE_SEARCH_CONSOLE_SITE_VERIFICATION: ${{ secrets.NEXT_PUBLIC_GOOGLE_SEARCH_CONSOLE_SITE_VERIFICATION }}
       
       - name: Setup Pages
         uses: actions/configure-pages@v4
