--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,7 +48,7 @@ jobs:
           VITE_APP_VERSION: ${{ github.sha }}
           NEXT_PUBLIC_RECAPTCHA_SITE_KEY: ${{ secrets.NEXT_PUBLIC_RECAPTCHA_SITE_KEY }}
           NEXT_PUBLIC_GOOGLE_SEARCH_CONSOLE_SITE_VERIFICATION: ${{ secrets.NEXT_PUBLIC_GOOGLE_SEARCH_CONSOLE_SITE_VERIFICATION }}
-          NEXT_PUBLIC_GA_MEASUREMENT_ID: ${{ env.NEXT_PUBLIC_GA_MEASUREMENT_ID }}
+          NEXT_PUBLIC_GA_MEASUREMENT_ID: ${{ vars.NEXT_PUBLIC_GA_MEASUREMENT_ID }}
       
       - name: Setup Pages
         uses: actions/configure-pages@v4
